.provarCaches/00D5f000005vwGkEAI/objects/rstkf__printemailtemplatedetail__c.object
<CustomObject>
    <description>printemailtemplatedetail__c</description>
    <fields>
        <fullName>rstkf__balancedue__c</fullName>
        <description>balancedue__c</description>
        <label>Balance Due</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__date__c</fullName>
        <description>date__c</description>
        <label>Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__dayslate__c</fullName>
        <description>dayslate__c</description>
        <label>Days Late</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__docno__c</fullName>
        <description>docno__c</description>
        <label>Document</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__duedate__c</fullName>
        <description>duedate__c</description>
        <label>Due Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__printemailtemplatedetail_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Company</description>
        <inlineHelpText>Customer Company</inlineHelpText>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Print Email Template Details</relationshipLabel>
        <relationshipName>printemailtemplatedetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__printemailtemplateheader__c</fullName>
        <description>printemailtemplateheader__c</description>
        <label>Print Email Template Header</label>
        <referenceTo>rstkf__printemailtemplateheader__c</referenceTo>
        <relationshipLabel>Print Email Template Details</relationshipLabel>
        <relationshipName>printemailtemplatedetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__type__c</fullName>
        <description>type__c</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Print Email Template Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Email Template Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>